# pse_core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  nanobind-api.md  nanobind-doc.md  nanobind-ownership.md  pyproject.toml  setup.py
.cache/clangd/index/: acceptor.cpp.F26412C6EBCD1EA2.idx  acceptor.h.6595209064A8A015.idx  add.cpp.CD95C0C209311E8C.idx  add.h.B07B2A12102540A7.idx  attr.h.54EC7BB7B5A1724A.idx  buffer.h.48612B0CCF1F3AF1.idx  buffer_info.h.E3915D9785159178.idx  cast.h.59380354C69367D7.idx  class.h.49DF9D321A50B5B9.idx  common.cpp.35034D9429098CC1.idx  common.h.50B7A701725792A1.idx  cpp_conduit.h.30D3D60960C06425.idx  descr.h.32A5BD6CEC7A40EC.idx  error.cpp.69FAAD2B16352BE5.idx  exception_translation.h.B21E7099C88829A4.idx  gil.h.1DA262336B72BCD1.idx  gil_safe_call_once.h.203763F646131888.idx  hash.h.D642EE311853ECBB.idx  implicit.cpp.339811660B95E0E7.idx  init.h.975C4AF216A1740D.idx  internals.h.023282105A136CA1.idx  nanobind.h.23F7544196CD8500.idx  nb_accessor.h.5D0D4D6895906CCD.idx  nb_attr.h.535A86DFB5B1B066.idx  nb_call.h.33AB4D3693998DA6.idx  nb_cast.h.3517C6D640FD17EA.idx  nb_class.h.B760066FC9D9D965.idx  nb_defs.h.67E610F704123773.idx  nb_descr.h.3CF543BC3A85EC90.idx  nb_enum.cpp.E8CBD2617CF34FFF.idx  nb_enums.h.27E8CF89681EA49D.idx  nb_error.h.BFA5EF4800967CDC.idx  nb_func.cpp.03D050C104906E3A.idx  nb_func.h.BB8C211228AFFE7E.idx  nb_internals.cpp.A752E8188D085075.idx  nb_internals.h.F37B48927994DA3C.idx  nb_lib.h.A56965C64962C8C9.idx  nb_misc.h.EE4801744274B202.idx  nb_ndarray.cpp.D528E59B0BD2E929.idx  nb_python.h.E35729FDD8737D1F.idx  (+23 more)
cmake_example.egg-info/: PKG-INFO  SOURCES.txt
include/: accepted_state.h  acceptor.h  acceptor_trampoline.h  state_machine.h  state_machine_trampoline.h  subtract.h  walker.h  walker_fwd.h  walker_trampoline.h
pse_core/: CMakeLists.txt  __init__.py  _core.pyi  acceptor.py  core.py  walker.py
pse_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pse_core/_core/: pse_core.cpp
pse_core/src/: test.cpp
python/pse_core/: __init__.py  _core.pyi  acceptor.py
src/: accepted_state.cpp  acceptor.cpp  add.cpp  bindings.cpp  pse_core.cpp  state_machine.cpp  subtract.cpp  walker.cpp
