[build-system]
requires = [
    "scikit-build-core",
    "nanobind",
]
build-backend = "scikit_build_core.build"

[project]
name = "pse_core"
version = "0.0.1"
authors = [
    { name = "Jack Wind", email = "jckwind11@gmail.com" },
    { name = "The Proxy Company", email = "contact@theproxy.company" }
]
description = "Proxy Structuring Engine: Core library"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"

[tool.cibuildwheel]
before-build = "rm -rf {project}/build && rm -rf {project}/src/*.egg-info"

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"

[tool.ruff.lint]
extend-select = [
  "B",    # flake8-bugbear
  "I",    # isort
  "PGH",  # pygrep-hooks
  "RUF",  # Ruff-specific
  "UP",   # pyupgrade
]
